image alignment fix (#6)

--- a/my-app/src/components/LoginForm/LoginForm.css
+++ b/my-app/src/components/LoginForm/LoginForm.css
@@ -8,6 +8,8 @@
     height: 80%;
     width: 80%;
     background-color: whitesmoke;
+
+    overflow: scroll;
 }
 
 .wrapper h1 {
@@ -67,16 +69,22 @@ button:hover{
 
 .input-view{
     width: 100%;
+    height: 100%;
     justify-content: center;
+    align-self: center;
     display: flex;
     flex-direction: column;
+    margin-top: -10rem;
+    padding: auto;
 }
 
 .login-view{
     width: 100%;
     justify-content: center;
     align-items: center;
+    align-self: center;
     display: flex;
+    flex-direction: column;
 }
 
 .buttons{
